--- a/package.json
+++ b/package.json
@@ -6,10 +6,32 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "i18next": "^21.5.4",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-h5-audio-player": "^3.8.1",
+    "react-i18next": "^11.14.3",
+    "react-icons": "^4.3.1",
+    "react-items-carousel": "^2.8.0",
+    "react-jinke-music-player": "^4.24.2",
+    "react-loader-spinner": "^4.0.0",
+    "react-modal": "^3.14.4",
+    "react-redux": "^7.2.6",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
+    "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4",
+    "webpack": "^4.44.2",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
     "workbox-cacheable-response": "^5.1.3",
