--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-h5-audio-player": "^3.8.1",
     "react-i18next": "^11.14.3",
     "react-icons": "^4.3.1",
     "react-items-carousel": "^2.8.0",
@@ -26,6 +25,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "react-share-social": "^0.1.48",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
