--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "i18next": "^21.5.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
-    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.14.3",
@@ -29,6 +28,7 @@
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.77.8",
     "styled-components": "^5.3.3",
     "web-vitals": "^0.2.4",
     "webpack": "^4.44.2",
