handle items pagination and enhance app design

--- a/src/info/app-config.json
+++ b/src/info/app-config.json
@@ -3,5 +3,9 @@
     "description": "Listen to your favorite radio stations and podcasts",
     "author": "Mahmoud Farargy",
     "radioBrowser": "https://de1.api.radio-browser.info/json",
-    "lyricsOvh": "https://api.lyrics.ovh"
+    "lyricsOvh": "https://api.lyrics.ovh",
+    "pageLimit": 50,
+    "portfolioURL": "https://mahmoudfarargy.vercel.app",
+    "ipapiURL": "https://ipapi.co/json"
+  
 }
