--- a/package.json
+++ b/package.json
@@ -3,33 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
-    "bootstrap": "^5.1.3",
+    "embla-carousel-react": "^8.6.0",
     "i18next": "^21.5.4",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^11.14.3",
     "react-icons": "^4.3.1",
-    "react-items-carousel": "^2.8.0",
     "react-jinke-music-player": "^4.24.2",
-    "react-loader-spinner": "^4.0.0",
-    "react-modal": "^3.14.4",
+    "react-loader-spinner": "^8.0.2",
     "react-redux": "^7.2.6",
-    "react-router": "^5.2.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^7.11.0",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.2.1",
-    "react-share-social": "^0.1.48",
-    "react-toastify": "^8.1.0",
+    "react-share": "^5.2.2",
+    "react-toastify": "^11.0.5",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
     "sass": "^1.77.8",
-    "styled-components": "^5.3.3",
+    "styled-components": "^6.1.19",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.3",
     "workbox-broadcast-update": "^5.1.3",
